# MatrixMultiplicationCUDA

./: .gitignore  BCSRMatrix.cu  BCSRMatrix.cuh  CMakeLists.txt  CSRMatrix.cu  CSRMatrix.cuh  HCSRMatrix.cpp  Matrix.cu  Matrix.cuh  README.md  avg_results.csv  block_size.h  build_run.sh  build_run_narval.sh  csrmm.cpp  csrmm.py  generate_all_matrices.sh  generate_block_matrices.sh  main.cu  matrix_generator.cpp  matrix_generator.h  matrix_generator.py  matrix_generator_test.cpp  miscutil.cpp  miscutil.h  nvbench_main.cu  results.csv  results.json  rorqual.sh  run_all_matrices.sh  runtests.ipynb  tester.py
cute/: gemm_cute_simt.cuh  gemm_cute_tensor.cu
cute/util/: debug.hpp
cute_test/: gemm_cute_simt.cu  gemm_cute_tensor.cuh
cutlass/util/: GPU_Clock.hpp  helper_cuda.hpp  print_error.hpp
formats/: BCSRMatrix.cu  BCSRMatrix.cuh  CSRMatrix.cu  CSRMatrix.cuh  HCSRMatrix.cpp  HCSRMatrix.h
generated_matrices/: generate_opt_matrix_list.py
nvbench/: CMakeLists.txt  main.cu
nvbench_demo-main/: example_bench.cu
src/: cuda_kernels.cu  cuda_kernels.cuh
